--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "cleanfolio",
+  "name": "alex-udeze",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://rjshkhr.github.io/cleanfolio",
   "dependencies": {
     "@material-ui/core": "^4.12.3",
     "@material-ui/icons": "^4.11.2",
